[gd_scene load_steps=11 format=4 uid="uid://cmrnnlqm5l2tm"]

[ext_resource type="Script" path="res://SquaresBoard/SectionBoard/section-board.gd" id="1_b8pw8"]
[ext_resource type="Texture2D" uid="uid://cd40oatjop8ob" path="res://Assets/grey_square_pair_32.png" id="2_4usjl"]
[ext_resource type="Script" path="res://SquaresBoard/SectionBoard/background_layer.gd" id="3_b4dkf"]
[ext_resource type="TileSet" uid="uid://b6s1qy4iv8rit" path="res://SquaresBoard/shapes-tile-set.tres" id="4_2yo8n"]
[ext_resource type="Texture2D" uid="uid://cphkikw2okayf" path="res://Assets/borders_16.png" id="4_qce67"]
[ext_resource type="Script" path="res://SquaresBoard/SectionBoard/border_layer.gd" id="5_v1q04"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_px684"]
texture = ExtResource("2_4usjl")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xb1h3"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_px684")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4ueh0"]
texture = ExtResource("4_qce67")
0:0/next_alternative_id = 2
0:0/0 = 0
1:0/next_alternative_id = 4
1:0/0 = 0
1:0/1 = 1
1:0/1/transpose = true
1:0/2 = 2
1:0/2/flip_h = true
1:0/3 = 3
1:0/3/flip_v = true
1:0/3/transpose = true
2:0/next_alternative_id = 4
2:0/0 = 0
2:0/1 = 1
2:0/1/flip_h = true
2:0/2 = 2
2:0/2/flip_h = true
2:0/2/flip_v = true
2:0/3 = 3
2:0/3/flip_v = true
3:0/next_alternative_id = 2
3:0/0 = 0
3:0/1 = 1
3:0/1/transpose = true
4:0/next_alternative_id = 4
4:0/0 = 0
4:0/1 = 1
4:0/1/flip_h = true
4:0/1/transpose = true
4:0/2 = 2
4:0/2/flip_v = true
4:0/3 = 3
4:0/3/transpose = true

[sub_resource type="TileSet" id="TileSet_y2mfq"]
sources/0 = SubResource("TileSetAtlasSource_4ueh0")

[node name="SectionBoard" type="Node2D"]
script = ExtResource("1_b8pw8")

[node name="BackgroundLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAADAAMAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAABAAAAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAACAAAAAgAAAAAAAAACAAEAAgAAAAAAAAACAAQAAgAAAAAAAAACAAUAAgAAAAAAAAADAAAAAgAAAAAAAAADAAEAAgAAAAAAAAADAAIAAgAAAAAAAAADAAQAAgAAAAAAAAADAAUAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAIAAgAAAAAAAAAFAAMAAgAAAAAAAAAFAAQAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAUAAgAAAAAAAAAHAAAAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAIAAgAAAAAAAAAHAAMAAgAAAAAAAAAHAAQAAgAAAAAAAAAHAAUAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAUAAgAAAAAAAAAJAAAAAgAAAAAAAAAJAAEAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAJAAQAAgAAAAAAAAAJAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAACAAYAAgAAAAAAAAACAAcAAgAAAAAAAAACAAgAAgAAAAAAAAACAAkAAgAAAAAAAAADAAYAAgAAAAAAAAADAAcAAgAAAAAAAAADAAgAAgAAAAAAAAADAAkAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAcAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAkAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAFAAgAAgAAAAAAAAAFAAkAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAcAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAkAAgAAAAAAAAAHAAYAAgAAAAAAAAAHAAcAAgAAAAAAAAAHAAgAAgAAAAAAAAAHAAkAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAcAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAkAAgAAAAAAAAAJAAYAAgAAAAAAAAAJAAcAAgAAAAAAAAAJAAgAAgAAAAAAAAAJAAkAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAcAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAAMAAAAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAUAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAANAAQAAgAAAAAAAAANAAUAAgAAAAAAAAANAAYAAgAAAAAAAAANAAcAAgAAAAAAAAANAAgAAgAAAAAAAAANAAkAAgAAAAAAAAAOAAAAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAkAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAPAAQAAgAAAAAAAAAPAAUAAgAAAAAAAAAPAAYAAgAAAAAAAAAPAAcAAgAAAAAAAAAPAAgAAgAAAAAAAAAPAAkAAgAAAAAAAAAQAAAAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAMAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAUAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAcAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAkAAgAAAAAAAAARAAAAAgAAAAAAAAARAAEAAgAAAAAAAAARAAIAAgAAAAAAAAARAAMAAgAAAAAAAAARAAQAAgAAAAAAAAARAAUAAgAAAAAAAAARAAYAAgAAAAAAAAARAAcAAgAAAAAAAAARAAgAAgAAAAAAAAARAAkAAgAAAAAAAAASAAAAAgAAAAAAAAASAAEAAgAAAAAAAAASAAIAAgAAAAAAAAASAAMAAgAAAAAAAAASAAQAAgAAAAAAAAASAAUAAgAAAAAAAAASAAYAAgAAAAAAAAASAAcAAgAAAAAAAAASAAgAAgAAAAAAAAASAAkAAgAAAAAAAAATAAAAAgAAAAAAAAATAAEAAgAAAAAAAAATAAIAAgAAAAAAAAATAAMAAgAAAAAAAAATAAQAAgAAAAAAAAATAAUAAgAAAAAAAAATAAYAAgAAAAAAAAATAAcAAgAAAAAAAAATAAgAAgAAAAAAAAATAAkAAgAAAAAAAAD/////AgABAAAAAAAAAP//AgABAAAAAAABAP//AgABAAAAAAACAP//AgABAAAAAAADAP//AgABAAAAAAAEAP//AgABAAAAAAAFAP//AgABAAAAAAAGAP//AgABAAAAAAAHAP//AgABAAAAAAAIAP//AgABAAAAAAAJAP//AgABAAAAAAAKAP//AgABAAAAAAALAP//AgABAAAAAAAMAP//AgABAAAAAAANAP//AgABAAAAAAAOAP//AgABAAAAAAAPAP//AgABAAAAAAAQAP//AgABAAAAAAARAP//AgABAAAAAAASAP//AgABAAAAAAATAP//AgABAAAAAAAUAP//AgABAAAAAAAUAAAAAgABAAAAAAAUAAEAAgABAAAAAAAUAAIAAgABAAAAAAAUAAMAAgABAAAAAAAUAAQAAgABAAAAAAAUAAUAAgABAAAAAAAUAAYAAgABAAAAAAAUAAcAAgABAAAAAAAUAAgAAgABAAAAAAAUAAkAAgABAAAAAAAUAAoAAgABAAAAAAD//woAAgABAAAAAAAAAAoAAgABAAAAAAABAAoAAgABAAAAAAACAAoAAgABAAAAAAADAAoAAgABAAAAAAAEAAoAAgABAAAAAAAFAAoAAgABAAAAAAAGAAoAAgABAAAAAAAHAAoAAgABAAAAAAAIAAoAAgABAAAAAAAJAAoAAgABAAAAAAAKAAoAAgABAAAAAAALAAoAAgABAAAAAAAMAAoAAgABAAAAAAANAAoAAgABAAAAAAAOAAoAAgABAAAAAAAPAAoAAgABAAAAAAAQAAoAAgABAAAAAAARAAoAAgABAAAAAAASAAoAAgABAAAAAAATAAoAAgABAAAAAAD//wAAAgABAAAAAAD//wEAAgABAAAAAAD//wIAAgABAAAAAAD//wMAAgABAAAAAAD//wQAAgABAAAAAAD//wUAAgABAAAAAAD//wYAAgABAAAAAAD//wcAAgABAAAAAAD//wgAAgABAAAAAAD//wkAAgABAAAAAAA=")
tile_set = SubResource("TileSet_xb1h3")
script = ExtResource("3_b4dkf")

[node name="PiecesPlacementLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_2yo8n")

[node name="BorderLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_y2mfq")
script = ExtResource("5_v1q04")

[node name="PiecePreviewLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_2yo8n")
